[tool.poetry]
name = "rlx"
version = "0.1.0"
description = "A reinforcement learning framework based on MLX"
authors = ["Noah Farr <login@noahfarr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlx = "^0.0.10"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
