[tool.poetry]
name = "rlx"
version = "0.1.0"
description = "A reinforcement learning framework based on MLX"
authors = ["Noah Farr <login@noahfarr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlx = "^0.2.0"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
tyro = "^0.8.5"
pillow = "^10.4.0"
tensorboard = "^2.18.0"
wandb = "^0.18.3"
mujoco = "^3.2.3"
imageio = "^2.35.1"
stable-baselines3 = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
